# llm-annotator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  run_tests.py
db/: feedback.sql  messages.sql  tags.sql
docs/: mcp.md
scripts/: README.md  seed_mock_data.py  simulate_db_feedbacks_to_tags.py
scripts/clean_blank_lines/: README.md  script.py
src/annotator/: __init__.py  app.py  cli.py  main.py  mcp.py
src/annotator/annotator/: __init__.py  base.py  multilabel.py  zeroshot_multilabel.py
src/annotator/tests/: README.md  __init__.py  base.py  conftest.py  test_annotation_pipeline.py  test_main.py  test_multilabel.py  test_utils.py  test_zeroshot_multilabel.py
src/annotator/utils/: __init__.py  path.py
