[project]
name = "tag-annotator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argilla>=2.8.0",
    "psycopg2-binary>=2.9.0",
    "config-morpher @ git+https://github.com/kenyo3026/configmorpher.git",
    "litellm>=1.80.11",
    "rich>=13.0.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "fastmcp>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
annotator = "annotator.cli:main"
annotator-api = "annotator.app:main"
annotator-mcp = "annotator.mcp:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit real external services (DB, LLM)",
]
log_cli = true
log_cli_level = "INFO"
